# TreeSkill

./: .gitignore  ARCHITECTURE.md  COMPLETE_SUMMARY.md  COMPLETE_SUMMARY_V0.2.0.md  CONFIG_AND_SKILL_COMPLETE.md  CORE_IMPLEMENTATION.md  DUAL_ADAPTERS_COMPLETE.md  MIGRATION_GUIDE.md  OPENAI_ADAPTER_SUMMARY.md  OPTIMIZER_COMPLETE.md  QUICKSTART.md  README.md  README_UPDATE_SUMMARY.md  RENAME_COMPLETE.md  SUMMARY.md  TOOLS_COMPLETE.md  TOOLS_GUIDE.md  USAGE_GUIDE.md  example_auto_optimize.py  example_fully_automatic.py  example_load_skill_and_config.py  example_optimizer.py  example_tools.py  example_tree_optimization.py  pyproject.toml  test_optimizer.py  test_tree_optimizer.py  verify_rename.py
.evolution/: current_skill.md  stats.json
demo/: BUGFIX_SUMMARY.md  EXPERIMENT_5ROUNDS_ISSUES.md  PROGRESSIVE_PRUNING.md  PROGRESSIVE_PRUNING_VALIDATION.md  README.md  TREE_OPTIMIZATION_DEMO.md  demo_distill_copy.py  demo_distill_frontend.py  demo_distill_frontend_aso.py  demo_distill_visual.py  demo_from_scratch.py  demo_from_skill.py  demo_qwen3_8b.py  demo_qwen3_8b_summary.md  demo_qwen3_8b_tree.py  demo_sealqa.py  demo_sealqa_aso.py  demo_sealqa_trajectory_rollout.py  demo_sealqa_tree_lifecycle.py  demo_tree_minimal_10min.py  github-repo-analyst.yaml  run_sealqa_demo.sh  scratch-writer.yaml  test_prune.py  writing-skills.yaml
docs/: ANTHROPIC_ADAPTER.md  ARCHITECTURE.md  CORE_ABSTRACTION.md  DEMO_PAPER_CLASSIFICATION.md  EXPERIMENTS.md  OPENAI_ADAPTER.md  OPTIMIZER_COMPLETE.md  QUICKSTART.md  TOOLS_GUIDE.md  TREE_OPTIMIZATION_DEMO.md  USAGE_GUIDE.md
docs_en/: README.md
(+106 files in other folders)
